[package]
name = "repogee"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = "0.4.44"
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.13.0"
jsonwebtoken = "10.4.0"
octocrab = "0.51.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
